Remove error jpa annotation default will cause error cause default is key word of protgres